Fixed some data visibility issues on speaker screen

--- a/src/app/components/speaker-screen/speaker-screen.component.scss
+++ b/src/app/components/speaker-screen/speaker-screen.component.scss
@@ -274,6 +274,23 @@
     .background-secondary {
       height: 60%;
       background-color: #E4E8EE;
+      display: flex;
+      width: 100%;
+      align-items: flex-end;
+      justify-content: center;
+
+      button {
+        background-color: #d26666;
+        color: #fff;
+        border: none;
+        padding: 1rem 5rem;
+        margin-bottom: 5rem;
+        z-index: 9999;
+
+        &:hover {
+          cursor: pointer;
+        }
+      }
     }
 
     .speaker-card-wrapper {
@@ -310,8 +327,9 @@
 
           .speaker-image {
             img {
-              display: block;
-              height: 100%;
+              width: 100%;
+              max-width: 355px;
+              height: auto;
             }
           }
 
@@ -319,7 +337,7 @@
             flex-grow: 1;
             display: flex;
             flex-direction: column;
-            padding: 3rem 6rem;
+            padding: 3rem 4rem;
 
             .counter-icon {
               display: flex;
